--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bs3-main-navigation.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bs3-main-navigation.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 
 // Base
-@bs3-main-navigation-height:                100px;
+@bs3-main-navigation-height:                60px;
 @bs3-main-navigation-background-color:     	@brand-primary-light;
 @bs3-main-navigation-background-color-rgba: rgba(red(@bs3-main-navigation-background-color), green(@bs3-main-navigation-background-color), blue(@bs3-main-navigation-background-color), 1);
 @bs3-main-navigation-border-radius:         0;
@@ -30,8 +30,8 @@
 @bs3-main-navigation-nav-link-background-color:                  #FFF;
 
 @bs3-main-navigation-nav-link-hover-text-decoration:             none;
-@bs3-main-navigation-nav-link-hover-font-color:                  @state-secondary-text;
-@bs3-main-navigation-nav-link-hover-background-color:            @state-secondary-bg;
+@bs3-main-navigation-nav-link-hover-font-color:                  #FFF;
+@bs3-main-navigation-nav-link-hover-background-color:            @brand-primary;
 
 @bs3-main-navigation-nav-link-active-text-decoration:            none;
 @bs3-main-navigation-nav-link-active-font-color:                 @bs3-main-navigation-nav-link-hover-font-color;
