--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bootstrap.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bootstrap.less
@@ -12,9 +12,9 @@
 @gray-dark:              lighten(@gray-base, 20%);   // #333
 @gray:                   lighten(@gray-base, 33.5%); // #555
 @gray-light:             lighten(@gray-base, 46.7%); // #777
-@gray-lighter:           lighten(@gray-base, 93.5%); // #eee
+@gray-lighter:           lighten(@gray-base, 85.0%); // #eee
 
-@brand-primary:         #6B2D52; // Var tidligere: #911653 / Lys: @brand-primary-light
+@brand-primary:         #8b0053; // Var tidligere: #911653 / Lys: @brand-primary-light
 @brand-primary-light:   #D599A9;
 @brand-success:         #A2AC16;
 @brand-info:            #81C3E7;
@@ -57,7 +57,7 @@
 
 @font-size-h1:            floor((@font-size-base * 2.6)); // ~36px
 @font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
-@font-size-h3:            ceil((@font-size-base * 1.7)); // ~24px
+@font-size-h3:            ceil((@font-size-base * 1.5)); // ~24px
 @font-size-h4:            ceil((@font-size-base * 1.25)); // ~18px
 @font-size-h5:            @font-size-base;
 @font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
@@ -71,7 +71,7 @@
 @headings-font-family:    'Open Sans', sans-serif;
 @headings-font-weight:    700;
 @headings-line-height:    1.1;
-@headings-color:          inherit;
+@headings-color:          @brand-primary;
 
 
 //== Iconography
@@ -105,9 +105,9 @@
 @line-height-large:         1.3333333; // extra decimals for Win 8.1 Chrome
 @line-height-small:         1.5;
 
-@border-radius-base:        4px;
-@border-radius-large:       6px;
-@border-radius-small:       3px;
+@border-radius-base:        6px;
+@border-radius-large:       8px;
+@border-radius-small:       4px;
 
 //** Global color for active items (e.g., navs or dropdowns).
 @component-active-color:    #fff;
