Bnner på forside

--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -6,9 +6,26 @@
 .banner {
 	border-radius: 4px;
 	.banner-wrapper {
-		padding: 30px 50px;
-		.banner-headline 	{ font-size: floor((@bs3-designer-icon-font-size * 3.5));}
-		.banner-text		{ font-size:floor((@bs3-designer-icon-font-size * 2.2));}
+		width: 100%;
+		.banner-headline 	{ 
+  		font-size: floor((@bs3-designer-icon-font-size * 1.4));
+  		background-image: url(../img/bannertextbg.png);
+  		background-repeat: no-repeat;
+  		background-position: right bottom;
+  		color: #FFF;
+      padding-left: 20px;
+      line-height: 44px;
+      height: 82px;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background-size: 100% auto;
+      padding-top: 33px;
+  		}
+		.banner-text {
+  		font-size:floor((@bs3-designer-icon-font-size * 1.2));
+  		color: #FFF;
+  		}
 		&.color-1 { color: #FFF;}
 		a { .btn;
 			.btn-primary;
