--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -3,39 +3,8 @@
 @import 'template/loader';
 
 
-.banner {
-	border-radius: 4px;
-	.banner-wrapper {
-		width: 100%;
-		.banner-headline 	{ 
-  		font-size: floor((@bs3-designer-icon-font-size * 1.4));
-  		background-image: url(../img/bannertextbg.png);
-  		background-repeat: no-repeat;
-  		background-position: right bottom;
-  		color: #FFF;
-      padding-left: 20px;
-      line-height: 44px;
-      height: 82px;
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      background-size: 100% auto;
-      padding-top: 33px;
-  		}
-		.banner-text {
-  		font-size:floor((@bs3-designer-icon-font-size * 1.2));
-  		color: #FFF;
-  		}
-		&.color-1 { color: #FFF;}
-		a { .btn;
-			.btn-primary;
-		}
-	}
-}
-
 .linkmenuer {
   ul.menu {
-
     li {
       line-height: 1.2;
       list-style: none;
@@ -71,9 +40,9 @@
   }
 }
 
-#region-sidebar-first ul.menu li ul li a.active, 
-#region-sidebar-first ul.menu li a, 
-#region-sidebar-first ul.menu li ul a {
+.linkmenuer ul.menu li ul li a.active, 
+.linkmenuer ul.menu li a, 
+.linkmenuer ul.menu li ul a {
   display: block;
   vertical-align: middle;
   line-height: 1.2;
@@ -82,69 +51,23 @@
   border-top: 2px solid #ddd;
   padding-left: 8px;
 }
+
+.field-name-field-os2web-base-field-spotbox.field-type-node-reference {
+  .field-items {
+    .make-row();
+    .field-item {
+      .make-sm-column(4);
+      max-width: 300px;
+      max-height: 150px;
+    }
+  }
+}
     
 .kontaktblok {
 		.kontaktblok-headline 	{ font-size: @font-size-h3; color: @brand-primary;}
 		.kontaktblok-text { font-size: @font-size-large;}
 }
 // os2-node-teaser node node-os2web-base-news view-mode-spotbox node--os2web_base_news--spotbox
-.view-mode-spotbox {
-		a { text-decoration: none;
-		}
-		&.imagespot {
-			position: relative;
-			width: 100%; /* for IE 6 */
-			.os2-node-teaser-heading {
-				position: absolute;
-				bottom: 20px;
-				left: 0;
-				width: 100%;
-			}
-		}
-
-// os2-node-teaser view-mode-spotbox os2-box os2-box-small-spacing node node-os2web-base-news contextual-links-region view-mode-spotbox node--os2web_base_news--spotbox
-
-		&.node-os2web-base-news {
-			.thumbnail {
-				background-color: #FFF;
-				margin-left: -4px;
-				margin-right: -4px;
-
-				.os2-node-teaser-heading {
-					padding: 5px 12px 12px;
-
-					h3.os2-node-teaser-heading-title {
-						background-color: transparent;
-						color: @btn-primary-color;
-						margin: 10px 0 5px;
-						padding: 0;
-					}
-					.news-text-date {
-						font-style: italic;
-						font-size: @font-size-small;
-					}
-				}
-			}
-		}
-
-		.os2-node-teaser-heading {
-
-			.os2-node-teaser-heading-title {
-				font-size: @font-size-h4 ;
-				background-color: @btn-primary-bg;
-				color: @btn-primary-color;
-				padding: @padding-base-horizontal;
-			}
-		}
-
-
-		.os2-node-teaser-body {
-			.os2-node-teaser-body-content {
-				font-size: @font-size-large ;
-				padding: @padding-base-horizontal ;
-			}
-		}
-}
 
 .footer {
 	padding: @padding-base-horizontal;
@@ -352,6 +275,8 @@
 }
 .main-content-area {
   padding: 0 ceil((@grid-gutter-width / 2));
+  max-width: @screen-md;
+  margin: auto;
 }
 
 
