--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -40,6 +40,12 @@
   }
 }
 
+.front {
+  .pane-os2sub-kontaktblok {
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+  }
+}
 .linkmenuer ul.menu li ul li a.active, 
 .linkmenuer ul.menu li a, 
 .linkmenuer ul.menu li ul a {
@@ -48,7 +54,7 @@
   line-height: 1.2;
   padding: 13px 40px 13px 20px;
   background: url(../img/v-arrow-default.png) no-repeat right 50%;
-  border-top: 2px solid #ddd;
+  border-top: 2px solid lighten(@gray-base, 70.0%);
   padding-left: 8px;
 }
 
