--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/box.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/box.less
@@ -12,7 +12,7 @@
 
 
 @os2sub-box-background-color: #fff;
-@os2sub-box-border-color: @gray-lighter;
+@os2sub-box-border-color: lighten(@gray-base, 70.0%);
 @os2sub-box-border: @os2sub-box-border-width solid @os2sub-box-border-color ;
 @os2sub-box-border-radius: 	 	@border-radius-base;
 @os2sub-box-border-width: 2px;
