--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/gallery.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/gallery.less
@@ -17,6 +17,7 @@
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
+      margin-bottom: 20px;
       .field-item {
         .make-sm-column(4);
         border-radius: 6px;
