Footer og sidebredder

--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -98,7 +98,15 @@
   }
 }
 
-
+.pane-menu-menu-genveje {
+  ul {
+    li {
+      a {
+        color: #333;
+      }
+    }
+  }
+}
 .pane-seniorportalen-nyhedsliste {
   ul {
     list-style: none; /* Remove list bullets */
@@ -108,12 +116,14 @@
   
   li {
       padding-left: 10px;
+      a {
+        color: #333;
+      }
   }
   
   li:before {
       content: ">"; /* Insert content that looks like bullets */
-      padding-right: 15px;
-      margin-left: -10px;
+      margin-left: -13px;
       color: @brand-primary;
   }
 }
@@ -392,6 +402,7 @@
 .container-fluid.no-gutters {
     padding: 0 !important;
 }
+.footer-inner,
 .main-navigation-bar,
 .header.row,
 .main-content-area {
@@ -401,10 +412,10 @@
 }
 
 
-.col-xs-15,
-.col-sm-15,
-.col-md-15,
-.col-lg-15 {
+.col-xs-15, .col-sm-15, .col-md-15, .col-lg-15,
+.col-xs-25, .col-sm-25, .col-md-25, .col-lg-25, 
+.col-xs-35, .col-sm-35, .col-md-35, .col-lg-35, 
+.col-xs-45, .col-sm-45, .col-md-45, .col-lg-45 {
     position: relative;
     min-height: 1px;
     padding-right: 10px;
@@ -420,10 +431,22 @@
 // Tablet
 @media @media-query-tablet {
 
-.col-sm-15 {
-        width: 20%;
-        float: left;
-    }
+  .col-sm-15 {
+    width: 20%;
+    float: left;
+  }
+  .col-sm-25 {
+    width: 40%;
+    float: left;
+  }
+  .col-sm-35 {
+    width: 60%;
+    float: left;
+  }
+  .col-sm-45 {
+    width: 80%;
+    float: left;
+  }
 }
 
 
@@ -431,20 +454,43 @@
 @media @media-query-desktop {
 
 	// Full node
-    .col-md-15 {
-        width: 20%;
-        float: left;
-    }
+  .col-md-15 {
+    width: 20%;
+    float: left;
+  }
+  .col-md-25 {
+    width: 40%;
+    float: left;
+  }
+  .col-md-35 {
+    width: 60%;
+    float: left;
+  }
+  .col-md-55 {
+    width: 80%;
+    float: left;
+  }
 }
-
 
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Full node
-    .col-lg-15 {
-        width: 20%;
-        float: left;
-    }
+  .col-lg-15 {
+    width: 20%;
+    float: left;
+  } 
+  .col-lg-25 {
+    width: 40%;
+    float: left;
+  } 
+  .col-lg-35 {
+    width: 60%;
+    float: left;
+  }
+  .col-lg-45 {
+    width: 80%;
+    float: left;
+  }  
 }
