--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/box.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/box.less
@@ -18,13 +18,13 @@
 @os2sub-box-border-width: 2px;
 
 @os2sub-box-heading-top-bottom-spacing: 20px;
-@os2sub-box-heading-left-right-spacing: @default-left-right-spacing;
+@os2sub-box-heading-left-right-spacing:  @grid-gutter-width;
 
-@os2sub-box-body-top-bottom-spacing: @default-left-right-spacing;
-@os2sub-box-body-left-right-spacing: @default-left-right-spacing;
+@os2sub-box-body-top-bottom-spacing: @grid-gutter-width;
+@os2sub-box-body-left-right-spacing: @grid-gutter-width;
 
 @os2sub-box-footer-top-bottom-spacing: 5px;
-@os2sub-box-footer-left-right-spacing: @default-left-right-spacing;
+@os2sub-box-footer-left-right-spacing:  @grid-gutter-width;
 
 // Responsive
 @os2sub-box-xs-stacked-spacing: floor( (@grid-gutter-width / 3) );
