--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
@@ -38,7 +38,7 @@
     .main-navigation-list {
       width: 100%;
         > li {
-            margin: 0 10px;
+            padding: 0 10px;
             float: right;
             border-radius: 8px;
         }
