--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bs3-designer.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bs3-designer.less
@@ -201,4 +201,10 @@
 @bs3-designer-headings-font-size-md: 0.9;
 @bs3-designer-headings-font-size-lg: 1.0;
 
+// Footer 
+@bs3-designer-footer-bg : @brand-primary;
+@bs3-designer-footer-text-color : @state-primary-text;
+@bs3-designer-footer-link-color : @state-primary-text;
+
+
 .padding-top-large {padding-top: 30px;}
