--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
@@ -56,7 +56,6 @@
 // Styling
 // --------------------------------------------------
 
-
 .view-mode-spotbox {
 		a { text-decoration: none;
 		}
@@ -187,8 +186,7 @@
         position: absolute;
         bottom: 0;
     		font-size: floor((@bs3-designer-icon-font-size * 1.1));
-    		background-repeat: no-repeat;
-    		background-position: right bottom;
+
     		color: #FFF;
     		display: block;
         padding-left: 10px;
@@ -197,7 +195,6 @@
         
         align-items: center;
         text-decoration: none;
-        height: 100%;
         margin: 0;
         padding: 0;
         
@@ -249,6 +246,70 @@
     .fa {
       margin: 0;
       padding: 0;
+    }
+  }
+  &.no-image-spot {
+    .spotbox-wrapper {
+      .spotbox-text {
+        
+        position: relative;
+
+    		font-size: floor((@bs3-designer-icon-font-size * 1.1));
+
+    		color: #FFF;
+
+        line-height: normal;        
+        align-items: center;
+        text-decoration: none;
+        margin: 0;
+        padding: 0;
+        
+        color: #fff;
+        font-size: 15px;
+        font-weight: normal;
+        display: flex;
+        justify-content: center;
+        padding-left: 10px;
+        
+        background: rgba(107,45,82,1);
+        width: 100%;
+        height: 100%;
+        display: flex;
+        text-decoration: none;
+        flex-direction: row;
+        background-image: url('../img/sk_coa.svg.png');
+        background-size: 60px;
+        background-repeat: no-repeat;
+        background-position: right 20px top -20px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        border-top: 3px solid @brand-primary-light;
+      }
+    }
+    .btn-spotbox {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      font-size: 26px;
+      color: rgba(107,45,82,1);
+      width: 30px;
+      min-width: 30px;
+      height: 30px;
+      background: #fff;
+      border: 3px solid lightgrey;
+      border-radius: 50%;
+      margin: 0;
+      padding: 0;
+      position: absolute;
+      right: 10px;
+      bottom: 10px;
+      
+      .fa {
+
+        margin: 0;
+        padding: 0;
+      }
     }
   } 
 }
