Headings farve i footer

--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bs3-designer.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bs3-designer.less
@@ -205,6 +205,6 @@
 @bs3-designer-footer-bg : @brand-primary;
 @bs3-designer-footer-text-color : @state-primary-text;
 @bs3-designer-footer-link-color : @state-primary-text;
-
+@bs3-designer-footer-headings-color: @state-primary-text;
 
 .padding-top-large {padding-top: 30px;}
