--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -49,11 +49,11 @@
     
     .main-navigation-list-link.with-icon {
      a {
-        padding-left: 45px;
-        font-size: 17px;
+        padding-left: 3em;
+        font-size: 1.2em;
         white-space: normal;
-        line-height: 16px;
-        height: 62px;
+        line-height: 1em;
+        height: 3.5em;
         font-weight: normal;
         display: flex;
         align-items: center;
@@ -66,7 +66,7 @@
           content: '';
           display: block;
           height: 100%;
-          left: 0.6667em;
+          left: 1.5em;
           position: absolute;
           top: 0;
           width: 25px;
@@ -410,7 +410,9 @@
   max-width: @screen-md;
   margin: auto;
 }
-
+.header.row {
+  margin: 0 auto 20px; 
+}
 
 .col-xs-15, .col-sm-15, .col-md-15, .col-lg-15,
 .col-xs-25, .col-sm-25, .col-md-25, .col-lg-25, 
