--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
@@ -137,7 +137,7 @@
         height: 50px;
         text-decoration: none;
         flex-direction: row;
-        background-image: url('../img/sk_coa.svg.png');
+        background-image: url('../img/sk_coa_white.svg');
         background-size: 80px;
         background-repeat: no-repeat;
         background-position: right 40px top -20px;
@@ -212,8 +212,8 @@
         display: flex;
         text-decoration: none;
         flex-direction: row;
-        background-image: url('../img/sk_coa.svg.png');
-        background-size: 60px;
+        background-image: url('../img/sk_coa_white.svg');
+        background-size: 260px;
         background-repeat: no-repeat;
         background-position: right 20px top -20px;
         border-bottom-left-radius: 5px;
@@ -251,23 +251,17 @@
   &.no-image-spot {
     .spotbox-wrapper {
       .spotbox-text {
-        
         position: relative;
-
-    		font-size: floor((@bs3-designer-icon-font-size * 1.1));
-
-    		color: #FFF;
 
         line-height: normal;        
         align-items: center;
-        text-decoration: none;
         margin: 0;
         padding: 0;
         
         color: #fff;
         font-size: 15px;
         font-weight: normal;
-        display: flex;
+
         justify-content: center;
         padding-left: 10px;
         
@@ -277,10 +271,10 @@
         display: flex;
         text-decoration: none;
         flex-direction: row;
-        background-image: url('../img/sk_coa.svg.png');
-        background-size: 60px;
+        background-image: url('../img/sk_coa_white.svg');
+        background-size: 160px;
         background-repeat: no-repeat;
-        background-position: right 20px top -20px;
+        background-position: right -32px top -26px;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
         border-top: 3px solid @brand-primary-light;
