box margin til links

--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/box.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/box.less
@@ -17,10 +17,10 @@
 @os2sub-box-border-radius: 	 	@border-radius-base;
 @os2sub-box-border-width: 2px;
 
-@os2sub-box-heading-top-bottom-spacing: 20px;
+@os2sub-box-heading-top-bottom-spacing: 10px 20px;
 @os2sub-box-heading-left-right-spacing:  @grid-gutter-width;
 
-@os2sub-box-body-top-bottom-spacing: @grid-gutter-width;
+@os2sub-box-body-top-bottom-spacing:10px 20px;
 @os2sub-box-body-left-right-spacing: @grid-gutter-width;
 
 @os2sub-box-footer-top-bottom-spacing: 5px;
