--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -26,7 +26,7 @@
       &.collapsed,
       &.leaf {
         padding: 0;
-        margin: 0 -10px;
+        margin: 0 -20px;
       }
       a {
         padding-left: 30px;
@@ -100,6 +100,8 @@
 
 .pane-menu-menu-genveje {
   ul {
+    height: 450px;
+    overflow: auto;
     li {
       a {
         color: #333;
