--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -41,7 +41,19 @@
   .os2sub-box-body {
     padding-bottom: 0;
   }
+  &.pane-menu-menu-links {
+    ul.menu {
+      li {
+        &.collapsed,
+        &.leaf {
+          padding: 0;
+          margin: 0 -20px;
+        }
+      }
+    }
+  }
 }
+
 
 .main-navigation-wrapper {
 
@@ -104,6 +116,7 @@
     overflow: auto;
     margin: 0 -20px;
     li {
+      margin: 0;
       a {
         color: #333;
       }
