--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -26,7 +26,7 @@
       &.collapsed,
       &.leaf {
         padding: 0;
-        margin: 0 -10px;
+        margin: 0;
       }
       a {
         padding-left: 30px;
