--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
@@ -18,9 +18,32 @@
 .main-navigation-wrapper {
   background-color: @brand-primary-light;
   padding: @default-left-right-spacing 0;
-    .search-form {
-        margin-left: @default-left-right-spacing;
-
+    .searchbox {
+      float: right;
+      width: 20%;
+      line-height: 16px;
+      background-color: #FFF;
+      border-radius: 8px;
+      border: 1px solid #ddd;
+      .searchbox-title {
+        background-color: #F7F7F7;
+        border-bottom: 1px solid #ccc;
+        color: @brand-primary;
+        text-align: center;
+        padding: 3px;
+      }
+      .form-wrapper {
+        margin-bottom: 0;
+        border: none;
+        .form-control {
+          border: none;
+        }
+        button {
+          background-color: transparent;
+          border-color: transparent;
+          .icon::before { color: #333}
+        }
+      }
         .btn {
 
             .icon {
