--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
@@ -31,6 +31,8 @@
         color: @brand-primary;
         text-align: center;
         padding: 3px;
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
       }
       .form-wrapper {
         margin-bottom: 0;
