--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
@@ -33,6 +33,7 @@
         padding: 3px;
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
+        font-weight: bold;
       }
       .form-wrapper {
         margin-bottom: 0;
