--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
@@ -178,9 +178,10 @@
   &.view-mode-spotbox {
     border-radius: 6px;
     .spotbox-wrapper {
-      height: 150px;
+      height: 85px;
       position: relative;
       display: block;
+      margin: 10px 0;
       .spotbox-text {
         
         position: absolute;
