--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
@@ -263,7 +263,7 @@
         font-size: 15px;
         font-weight: normal;
 
-        justify-content: center;
+        justify-content:flex-start;
         padding-left: 10px;
         
         background: rgba(107,45,82,1);
