--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
@@ -22,9 +22,12 @@
       float: right;
       width: 20%;
       line-height: 16px;
-      background-color: #FFF;
-      border-radius: 8px;
-      border: 1px solid #ddd;
+      .searchbox-inner {
+        margin: 0 10px;
+        background-color: #FFF;
+        border-radius: 8px;
+        border: 1px solid #ddd;
+      }
       .searchbox-title {
         background-color: #F7F7F7;
         border-bottom: 1px solid #ccc;
