--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bootstrap.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bootstrap.less
@@ -15,7 +15,7 @@
 @gray-lighter:           lighten(@gray-base, 85.0%); // #eee
 
 @brand-primary:         #8b0053; // Var tidligere: #911653 / Lys: @brand-primary-light
-@brand-primary-light:   #D599A9;
+@brand-primary-light:   #C6858F;
 @brand-success:         #A2AC16;
 @brand-info:            #81C3E7;
 @brand-warning:         #F3EC69;
@@ -105,9 +105,9 @@
 @line-height-large:         1.3333333; // extra decimals for Win 8.1 Chrome
 @line-height-small:         1.5;
 
-@border-radius-base:        6px;
-@border-radius-large:       8px;
-@border-radius-small:       4px;
+@border-radius-base:        4px;
+@border-radius-large:       6px;
+@border-radius-small:       3px;
 
 //** Global color for active items (e.g., navs or dropdowns).
 @component-active-color:    #fff;
