--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -76,6 +76,7 @@
         line-height: 2.0em;
         background-color: #FFF;
         margin: 0;
+        border-width: 2px;
         &:hover {
           background-color: #8b0053;
         }
@@ -185,12 +186,14 @@
     display: flex;
     flex-direction: row;
     justify-content: right;
+    margin-right: -10px;
     .nav();
     .nav-pills();
     > .main-navigation-list-link {
       float: right;
-      margin-left: 10px;
+      margin-left: 20px;
       width: auto;
+      padding: 0;
       a {
         border: 2px solid lighten(@gray-base, 70.0%);
         padding: 5px 15px;
@@ -407,7 +410,7 @@
 @bs3-main-navigation-nav-link-hover-background-color: transparent ;
 .front .pane-os2sub-banner  { margin-bottom: 10px; margin-top: 0;}
 .front .pane-os2sub-nyheder { margin-bottom: 10px; margin-top: 10px;}
-.os2web-spotbox-spotbox { border-radius: 6px;}
+.os2web-spotbox-spotbox { border-radius: 4px;}
 @radius: 3px;
 
 .simple-navigation-logo-link { color: #333; text-align: left; font-size: @font-size-large;
