--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/box.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/box.less
@@ -83,9 +83,17 @@
     border-bottom-right-radius: @border-radius-base;
     margin-bottom: 10px;
     border-bottom: @os2sub-box-border-width solid @os2sub-box-border-color;
-
     }
 
+    .os2sub-box-heading {
+      padding: 10px 20px 0px;
+    }
+    .linkmenuer {
+      a {
+        border-top: none;
+        color: #000;
+      }
+    }
   }
 }
 
