--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bootstrap.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bootstrap.less
@@ -14,7 +14,7 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 85.0%); // #eee
 
-@brand-primary:         #8b0053; // Var tidligere: #911653 / Lys: @brand-primary-light
+@brand-primary:         rgba(107,45,82,1); // Var tidligere: #911653 / Lys: @brand-primary-light
 @brand-primary-light:   #C6858F;
 @brand-success:         #A2AC16;
 @brand-info:            #81C3E7;
