margin under spots

--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -241,9 +241,6 @@
   }
 }
 
-
-
-
 .linkmenuer ul.menu li ul li a.active, 
 .linkmenuer ul.menu li a, 
 .linkmenuer ul.menu li ul a {
@@ -263,6 +260,7 @@
       .make-sm-column(4);
       max-width: 300px;
       max-height: 150px;
+      margin-bottom: 20px;
     }
   }
 }
