--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -169,6 +169,9 @@
 
 
 .pane-seniorportalen-nyhedsliste {
+  .os2sub-box-heading {
+    padding-bottom: 0;
+  }
   ul {
     list-style: none; /* Remove list bullets */
     padding: 0;
