--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/box.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/box.less
@@ -95,6 +95,11 @@
       }
     }
   }
+  .pane-os2sub-kontaktblok {
+    .view-mode-teaser {
+      margin-bottom: 0;
+    }
+  }
 }
 
 // --------------------------------------------------
