--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -165,7 +165,9 @@
   -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
 
-
+.pane-node-field-os2web-base-field-selfserv {
+  margin-bottom: 20px;
+}
 
 
 .pane-seniorportalen-nyhedsliste {
