--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -195,7 +195,7 @@
 }
 
 .front {
-  .pane-os2sub-kontaktblok {
+  .pane-seniorportalen-nyhedsliste {
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
   }
@@ -554,6 +554,9 @@
     width: 80%;
     float: left;
   }
+  .linkmenuer ul.menu li a {
+    font-size: 90%;
+  }
 }
 
 
@@ -576,6 +579,9 @@
   .col-md-55 {
     width: 80%;
     float: left;
+  }
+  .linkmenuer ul.menu li a {
+    font-size: 100%;
   }
 }
 
