--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -120,6 +120,7 @@
         background-image: url('../img/icons/menu/house-outline.svg');
     }
     .with-icon.house-outline a:hover:before,
+    .with-icon.house-outline a.active-trail:before,
     .with-icon.house-outline a.active-trail:hover:before {
         background-image: url('../img/icons/menu/house-outline-hover.svg');
     }
@@ -127,6 +128,7 @@
         background-image: url('../img/icons/menu/bicycle.svg');
     }
     .with-icon.bicycle a:hover:before,
+    .with-icon.bicycle a.active-trail:before,
     .with-icon.bicycle a.active-trail:hover:before{
         background-image: url('../img/icons/menu/bicycle-hover.svg');
     }
@@ -134,6 +136,7 @@
         background-image: url('../img/icons/menu/handshake.svg');
     }
     .with-icon.handshake a:hover:before,
+    .with-icon.handshake a.active-trail:before,
     .with-icon.handshake a.active-trail:hover:before{
         background-image: url('../img/icons/menu/handshake-hover.svg');
     }
@@ -439,6 +442,7 @@
 
 .page-node .view-os2sub-banner { margin-bottom: 20px;}
 
+
 .main-navigation-wrapper .main-navigation-list .main-navigation-list-link > a.cykel,
 .main-navigation-wrapper .main-navigation-list .main-navigation-list-link > a.hus,
 .main-navigation-wrapper .main-navigation-list .main-navigation-list-link > a.hands {
@@ -554,6 +558,7 @@
     width: 80%;
     float: left;
   }
+  .panel-pane.knap .btn-lg,
   .linkmenuer ul.menu li a {
     font-size: 90%;
   }
@@ -580,6 +585,7 @@
     width: 80%;
     float: left;
   }
+  .panel-pane.knap .btn-lg,
   .linkmenuer ul.menu li a {
     font-size: 100%;
   }
