--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -613,3 +613,23 @@
     float: left;
   }  
 }
+
+ 
+.node-header {
+  &.with-spots .views-row {
+    position: relative;
+    .views-field-field-os2web-base-field-image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      img {
+        width: 50%;
+        height: auto;
+      }
+    }
+    p, h1 {
+      width: 50%;
+      margin-left: 50%;
+    }
+  }
+}
