--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -618,6 +618,10 @@
 .node-header {
   &.with-spots .views-row {
     position: relative;
+    min-height: 194px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+    border: 2px solid #b3b3b3;
     .views-field-field-os2web-base-field-image {
       position: absolute;
       top: 0;
@@ -625,6 +629,9 @@
       img {
         width: 50%;
         height: auto;
+        border-radius: 4px;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
       }
     }
     p, h1 {
