--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -632,11 +632,12 @@
         border-radius: 4px;
         border-top-left-radius: 4px;
         border-bottom-left-radius: 4px;
+        float: left;
       }
     }
     p, h1 {
-      width: 50%;
-      margin-left: 50%;
+      width: 44%;
+      margin-left: 54%;
     }
   }
 }
