--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
@@ -235,6 +235,10 @@
     }
   }
   &.no-image-spot {
+    .bottom-link {
+      height: 100%;
+      display: block;
+    }
     .spotbox-wrapper {
       height: 85px;
       .spotbox-text {
@@ -244,6 +248,7 @@
         align-items: center;
         margin: 0;
         padding: 0;
+        padding-right: 41px;
         
         color: #fff;
         font-size: 15px;
