--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -77,6 +77,7 @@
         background-color: #FFF;
         margin: 0;
         border-width: 2px;
+        border-radius: @border-radius-base;
         &:hover {
           background-color: #8b0053;
         }
