--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/main-navigation.less
@@ -25,7 +25,7 @@
       .searchbox-inner {
         margin: 0 10px;
         background-color: #FFF;
-        border-radius: 8px;
+        border-radius: @border-radius-base;
         border: 1px solid #ddd;
       }
       .searchbox-title {
@@ -34,8 +34,8 @@
         color: @brand-primary;
         text-align: center;
         padding: 3px;
-        border-top-left-radius: 8px;
-        border-top-right-radius: 8px;
+        border-top-left-radius: @border-radius-base;
+        border-top-right-radius: @border-radius-base;
         font-weight: bold;
       }
       .form-wrapper {
@@ -69,7 +69,7 @@
         > li {
             padding: 0 10px;
             float: right;
-            border-radius: 8px;
+            border-radius: @border-radius-base;
         }
     }
 }
