--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -621,8 +621,9 @@
     position: relative;
     min-height: 194px;
     margin-bottom: 20px;
-    border-radius: 4px;
+    border-radius: @border-radius-base;
     border: 2px solid #b3b3b3;
+    overflow: hidden;
     .views-field-field-os2web-base-field-image {
       position: absolute;
       top: 0;
@@ -631,8 +632,8 @@
         width: 50%;
         height: auto;
         border-radius: 4px;
-        border-top-left-radius: 4px;
-        border-bottom-left-radius: 4px;
+        border-top-left-radius: @border-radius-base;
+        border-bottom-left-radius: @border-radius-base;
         float: left;
       }
     }
