Bild på sider u spots

--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -624,6 +624,9 @@
     border-radius: @border-radius-base;
     border: 2px solid #b3b3b3;
     overflow: hidden;
+    img {
+      float: left;
+    }
     .views-field-field-os2web-base-field-image {
       position: absolute;
       top: 0;
